[package]
name = "imgui-dx9-renderer"
version = "0.11.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2024"
description = "DirectX 9 renderer for the imgui crate"
homepage = "https://github.com/Veykril/imgui-dx9-renderer"
repository = "https://github.com/Veykril/imgui-dx9-renderer"
license = "MIT"
readme = "README.md"
categories = ["gui", "rendering"]

[dependencies]
imgui = "0.12.0"
windows-core = "0.62.2"
windows-numerics = "0.3.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
] }

[dev-dependencies]
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
raw-window-handle = "0.6.2"
windows = { version = "0.62.2", features = ["Win32_Graphics_Gdi"] }
winit = "0.30.13"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
